# bajs

./: CMakeLists.txt  OLDrun.sh  README.md  git  main.cpp  run.sh  sfml-app
include/: arrow.h  projectile.h  target.h
source/: arrow.cpp  main.cpp  projectile.cpp  target.cpp
